--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -40,7 +40,7 @@ article.post:last-of-type {
   border-bottom: none;
 }
 
-/* Header 
+/* Header
 .site-header {
   border-bottom: 2px solid #999;
 }*/
@@ -105,3 +105,10 @@ div.info-box {
   text-align: center;
 }
 h4 {color: #ff9800;}
+
+
+/*wp post image*/
+
+.wp-post-image{
+  width: 100%;
+}
