--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -5,6 +5,8 @@ Author: FernandoHuber
 Versio: 1.0
 */
 
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
