--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -22,6 +22,10 @@ p {
 	line-height: 1.65em;
 }
 
+/* Header*/
+
+.site-header { float: right;}
+
 /* General Layout */
 
 div.container {
@@ -39,7 +43,7 @@ article.post {
 }
 
 div.main-page{
-  margin-top: 2vh
+  padding-top: 2vh
 }
 
 article.post:last-of-type {
