changing menu layout

--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -80,7 +80,7 @@ article.post:last-of-type {
 .site-header nav ul li a:link,
 .site-header nav ul li a:visited {
   display: block;
-  padding: 10px 18px;
+  padding: 0px 2%;
   /*border: 1px solid #BBB;*/
   text-decoration: none;
   color: #9E9E9E
