--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -80,8 +80,9 @@ article.post:last-of-type {
 .site-header nav ul li a:link,
 .site-header nav ul li a:visited {
   display: block;
-  padding: 0px 2%;
+  /*padding: 0px 2%;*/
   /*border: 1px solid #BBB;*/
+  margin-right: 2%
   text-decoration: none;
   color: #9E9E9E
 }
