add padding-top about-me

--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -40,6 +40,7 @@ div.container {
 article.post {
   /*border-bottom: 2px dotted #bbbbbb;*/
   /*border-top: 2px solid #bbbbbb;*/
+  padding-top: 10vh
 
 }
 
