--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -44,6 +44,13 @@ article.post {
 
 }
 
+article.post img{
+  /*border-bottom: 2px dotted #bbbbbb;*/
+  /*border-top: 2px solid #bbbbbb;*/
+  width: 100%;
+
+}
+
 .main-page { padding-top: 10vh}
 
 
