--- a/wordpress/wp-content/themes/portfolio/style.css
+++ b/wordpress/wp-content/themes/portfolio/style.css
@@ -30,10 +30,10 @@ p {
 /* General Layout */
 
 div.container {
-  max-width: 920px;
+  /*max-width: 920px;*/
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  /*padding-left: 20px;*/
+  /*padding-right: 20px;*/
   padding-top: 2vh;
 }
 
